Fix x-coordinate overflow

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -112,8 +112,8 @@ h1 {
 
 #sellIt {
   font-size: 14px;
-  padding: 40px;
-  margin: 0 3vw 10vh 0;
+  padding: 0px;
+  margin: 0 0 10vh 0;
   background-color: #2A1C15;
   display: flex;
   flex-direction: column;
